--- a/1style.css
+++ b/1style.css
@@ -15,32 +15,43 @@ body{
     position: relative;
     z-index: 10;
 }
+.main_section{
+    height:100%;
+    top:0rem; 
+     position: sticky;}
 .main_section_1{
+    /* display: block; */
     background-image: url(./img/home-new-bg-free-img.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    position: relative;
-    z-index: -10;
+    /* position: relative;
+    z-index: -10; */
     width:100%;
-    height:50rem;
+    height:50vw;
     background-color: aqua;
-    position: sticky;
-    top:0rem;
-}nav{
+  
+    
+}.main_section_2{
+    background-image: url(./img/banner-03.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    /* position: relative;
+    z-index: -10; */
+    width:100%;
+    height:70vw;
+    background-color: aqua;
+    /* position: sticky;
+    bottom:0px; */
+
+}
+nav{
     position: absolute;
     width:100%;
     height:5rem;
     background-color: #146190;
 
 }
-.section_A{
-    position: relative;
-    z-index: 10;
-    background-color: aqua;
-    width:100%;
-    height:50rem;
-    border:1 px solid black;
-    }
+
     ul{
         display:flex;
         gap:2rem;
@@ -58,6 +69,44 @@ body{
         align-items: center;
         /* justify-content: center; */
     }
-    .section _b{
-        position:;
+    .section_A{
+        position: relative;
+        z-index: 10;
+        background-color: aqua;
+        width:100%;
+        height:50rem;
+        border:1 px solid black;
+        }
+    .section_b{ 
+         display:felx;
+        align-items: center;
+        justify-content: center;
+        position:relative;
+        height:80rem;
+        background-color:transparent;
+        z-index: 20;
+        width:100%;
     }
+ 
+    /* section in img  */
+.img_section_1{
+  
+    /* background-image: url(./img/banner-03.jpg); */
+    background-repeat: no-repeat;
+    background-size: 100%;  
+    width:100%;
+    height:50rem;
+    background-color: aqua;
+    position:sticky;
+    position: relative;
+    top:0;
+    z-index: -20;
+    width:95%
+}
+.section_d{
+    position:relative;
+    height:40rem;
+    background-color: rgb(18, 4, 31);
+    z-index: 40;
+    width:100%;
+}
