--- a/style.css
+++ b/style.css
@@ -1,30 +1,131 @@
-/* *{
-    padding:0;
-    margin:0;
-}
-.section_A{
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    width:100%;
-    height:20rem;
-    border:1px solid black; 
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.top_box{
-    display: flex;
-    
+.container {
+  height: 200vw;
+  width: 100%;
+  background-color: chartreuse;
 }
- .box{
-    display:grid ;
-    justify-content: center;
-    align-items: center;
-    width:20rem;
-    height:15rem;
-    border: 1px solid black;
- }
- .fa-solid{
-    /* text-align: center; */
-    font-size: 5rem;
-    /* height:8rem; */
- } */
+.section_A {
+  position: relative;
+  background-image: url(./img/home-new-bg-free-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 30%;
+  width: 100%;
+  background-color: rgb(39, 65, 149);
+  z-index: 1;
+}
+.section_B {
+  height: 50%;
+  width: 100%;
+  background-color: rgb(231, 231, 231);
+}
+.section_C {
+  background-image: url(./img/banner-03.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  border: 1px solid black;
+  background-color: rgb(112, 76, 41);
+  height: 50%;
+}
+.section_D {
+  width: 100%;
+  border: 1px solid rgb(233, 14, 14);
+  background-color: #ff860e;
+  height: 50%;
+}
+
+/* nav section*/
+nav {
+  position: absolute;
+  width: 100%;
+  height: 5rem;
+  background-color: #146190;
+  /* position: sticy; */
+  top: 0;
+  z-index: 999;
+}
+.nav_top_box {
+  display: flex;
+  align-items: center;
+}
+.nav_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 15px 0px 15px;
+}
+li {
+  color: white;
+}
+ul {
+  display: flex;
+  gap: 1.4rem;
+  list-style-type: none;
+  color: black;
+  display: flex;
+  list-style-type: none;
+}
+.nav_in_img_is_ul {
+  padding-left: 1.4rem;
+  gap: 2.4rem;
+  display: flex;
+  align-items: center;
+}
+.ODERlist {
+  padding-right: 1rem;
+}
+.logo_img {
+  width: 10rem;
+  padding-top: 16px;
+}
+.header_1_img {
+  width: 100%;
+}
+
+/* main section  starts*/
+
+.section_text_box {
+  position: absolute;
+  width: 50%;
+  height: 20rem;
+  left: 3.5rem;
+  top: 13.5rem;
+}
+.section_center_text {
+}
+.text_box {
+  font-weight: 900;
+  font-size: 4rem;
+  color: white;
+}
+.descont_text {
+  padding-top: 0.7rem;
+  font-weight: 900;
+  font-size: 2rem;
+  color: white;
+}
+/* BOTTON MAIN SECTION IN */
+.btn_box_in_section {
+  padding-top: 1.4rem;
+  gap: 1.3rem;
+  display: flex;
+}
+.shop_button:hover {
+  background-color: black;
+  color: white;
+}
+
+button {
+  font-size: 18px;
+  font-weight: 500;
+  width: 8rem;
+  height: 2.5rem;
+  background-color: white;
+}
