--- a/style.css
+++ b/style.css
@@ -129,3 +129,17 @@ button {
   height: 2.5rem;
   background-color: white;
 }
+/* section a media responsive */
+@media screen and (max-width: 990px) {
+  ul {
+    display: none;
+  }
+  .sectionA {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 990px) {
+  .hum_barger_button {
+    display: none;
+  }
+}
