this code change card in  and nav bar hum burger buttin click

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 
 .container {
   height: 200vw;
-  width: 99.9%;
-  background-color: chartreuse;
+  width: 99.8%;
+  /* background-color: chartreuse; */
 }
 .section_A {
   position: relative;
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 22%;
+  height: 30%;
   width: 100%;
   background-color: rgb(39, 65, 149);
   z-index: 1;
@@ -42,9 +42,9 @@
 }
 
 /* nav section*/
-header{
- display: flex;
- align-items: center;
+header {
+  display: flex;
+  align-items: center;
 }
 nav {
   position: absolute;
@@ -147,38 +147,63 @@ button {
   }
 }
 /* section B start  */
-.section_in_box{
-  position:relative;
-  display:flex;
-  width:70%;
-  height:50rem;
-
-  
+.section_in_box {
+  position: relative;
+  display: flex;
+  width: 30%;
+  margin: 1rem;
+  /* height: 30rem; */
 }
-.section_B_in_top_box{
+.section_B_in_top_box {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .img_1,
 .img_2,
-.img_3{
+.img_3 {
   width: 97%;
-  height:34rem;
-  
+  height: 28rem;
+}
+.section_B_img_text_box {
+  position: absolute;
+  top: 11rem;
+  z-index: 70;
+  left: 1rem;
+  margin: 1rem;
+}
+.btn_section_b {
+  margin: 1rem;
+  border: 2px solid white;
+}
+.section_B_in_text {
+  font-size: 19px;
+  width: 70%;
+  color: white;
+  margin: 1rem;
+}
+.section_b_in_text_header {
+  color: white;
+  margin: 1rem;
 }
 
-.slider{
-  height:15rem;
+.slider {
+  height: 15rem;
 }
 
-.section_img_1{
+.section_img_1 {
   position: absolute;
   z-index: 60;
 }
-
-
-
-
-
-
+/* on click in nav bar  on side bar */
+@media screen and (max-width: 970) {
+  nav {
+    position: absolute;
+    width: 40rem;
+    height: 50rem;
+    border: 1px solid black;
+    /* background-color: #146190; */
+    z-index: 999;
+  }
+}
